Clean code and optimization